k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mobile-platform-api
  namespace: mobile-platform-lab
  labels:
    app.kubernetes.io/name: mobile-platform-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mobile-platform-api
  ports:
    - name: http
      port: 80
      targetPort: http
